--- a/component/Home/Home.module.css
+++ b/component/Home/Home.module.css
@@ -222,8 +222,8 @@ cursor: pointer;
   align-items: center;
   border-radius: 20px;
   padding: 40px;
-  background-color: #ffffff;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+  box-shadow: 5px 4px 21px rgba(0,0,0,.07), -6px -6px 9px -1px #fff;
   margin: 20px;
   height: 350px;
 
@@ -297,7 +297,7 @@ font-weight: 600;
   height: 400px;
   position: absolute;
   top: 0;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(30px);
   -webkit-backdrop-filter: blur(10px);
 }
 .home_section_three  .slider_right{
@@ -333,7 +333,7 @@ font-weight: 600;
 
 
 .slider_two {
-  backdrop-filter: blur(20px);
+  backdrop-filter: blur(30px);
   -webkit-backdrop-filter: blur(10px);
   margin-top: 110px;
   height: 320px;
@@ -506,10 +506,10 @@ color: white;
 }
 .home_section_four .cyber{
   backdrop-filter: blur(20px) !important;
-  background-color: #cacaca !important;
+  background-color: #0169f9 !important;
 }
 .home_section_four .cyber .red_content .content a{
-  background: linear-gradient(550deg,#000000,#ea8306) !important;
+  background:var(--brand_color);
 }
 
 .home_section_four .cyber .bg{
@@ -568,7 +568,7 @@ margin-top: 50px;}
   top: 10px !important;
   margin-left: 0px !important;
   margin-bottom: 30px;
-  margin-top: 30px;
+  margin-top: 190px;
 }
 .home_section_four .red {
 
@@ -592,7 +592,7 @@ margin-top: 50px;}
 }
 .home_section_four .red .red_content .content{
   position: absolute;
-  top:500px;
+  top:190px;
   z-index: 5;
 }
 .home_section_four .red .red_content .content a h6{
@@ -605,13 +605,14 @@ margin-top: 50px;}
 
 .home_section_four .slider{
   position: relative;
+  height: 907px;
 }
 
 .home_section_four .slider .top{
-  height: 350px;
+  /* height: 150px; */
   width: 100%;
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(10px);
+  /* backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(10px); */
   z-index: 99;
   position: absolute;
   top: 0;
@@ -619,10 +620,10 @@ margin-top: 50px;}
 }
 
 .home_section_four .slider .down{
-  height: 350px;
+  /* height: 150px; */
   width: 100%;
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(10px);
+  /* backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(10px); */
   z-index: 99;
   position: absolute;
   bottom: 0px;
@@ -637,15 +638,27 @@ margin-top: 50px;}
  
 }
 .slider_red_one .item{
+  position: relative;
   background-color: white;
   padding: 20px;
   border-radius: 20px;
-  width: 400px !important;
-  margin-top: 20px;
-  margin-left: 50px;
+  width: 340px !important;
+  margin-top: 50px;
+
+
 }
 
-
+.slider_red_one .item::after{
+  position: absolute;
+  top: -30px;
+  left: -50px;
+  content: '0';
+  width: 130% !important;
+  height:  120% !important;
+  backdrop-filter: blur(10px);
+color: #e7000000;
+/* border-radius: 20px; */
+}
 
 .slider_red_one .item h1{
   font-size: 1.67vw;
@@ -665,8 +678,8 @@ margin-top: 50px;}
   text-align: center;
 }
 .slider_red_one .item .img{
-  margin-top: 15px;
-  margin-bottom: 15pt;
+  padding-bottom: 20px;
+
   margin: auto;
   display: flex;
   justify-content: center;
@@ -675,6 +688,7 @@ margin-top: 50px;}
   background-color: rgb(255, 255, 255);
 }
 .slider_red_one .item .img img{
+
 background-size: cover;
 width: 180px;
 height: 180px;
@@ -683,8 +697,8 @@ border-radius: 100%;
 .slider_red_one .item p{
   text-align: center;
   font-size: 16px;
-  padding-bottom: 0.26vw;
-    padding-top: 0.26vw;
+  padding-bottom: 0;
+    padding-top: 0;
     font-weight: 400;
     color: #000000;
 }
@@ -702,16 +716,17 @@ border-radius: 100%;
   width: 40px;
 }
 .home_section_four .tab {
-  position: relative;
-  top: 238px;
-  left: 319px;
-  z-index: 999999;
+position: relative;
+    top: 110px;
+    left: 298px;
+    z-index: 999999;
 
 }
 
 .home_section_four .tab button{
   margin: 20px;
   background-color: #000000;
+  color: white;
   padding: 10px 20px;
   border-radius: 25px;
   border: 1px solid rgba(245, 245, 220, 0);
@@ -759,3 +774,4 @@ border-radius: 100%;
 		transform: translate(30px) rotate(225deg);
 	}
 }
+
