--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,66 @@
 
+.slider_red_one .slick-slider .slick-list{
+ 
+}
 
 
+.red-slider  .slick-list {
+  transform: translate3d(0, 0, 0);
+  height: 907px !important;
+  padding-top: 200px !important;
+
+}
+.red-slider  .slick-list .slick-slide{
+  display: flex;
+  justify-content: center;
+  /* width: 300px !important; */
+  /* backdrop-filter: blur(20px) !important; */
+
+}
+.red-slider  .slick-list .slick-active  .Home_item__csXbs::after{
+  position: absolute;
+  top: 0;
+  content: '0';
+  width: 100% !important;
+  height:  100% !important;
+  backdrop-filter: blur(0px) !important;
+}
+.red-slider  .slick-list .slick-active .Home_item__csXbs{
+  position: relative;
+  /* right: 25px; */
+  transition: 0.4s;
+  width: 390px !important;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  /* width: 300px !important; */
+  /* backdrop-filter: blur(20px) !important; */
+background-color: #ffffff !important;
+}
 
  /* Light Mode Styles */
+ 
+
+ :root {
+  --family1: 'DM Sans', sans-serif;
+  --brand_color:#FFD700;
+  --font_color1:#000000 ;
+
+}
 body {
+  max-width: 100vw;
+  overflow-x: hidden;
   background-color: #f7f2f2 !important;
 
  }
+ 
+
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
  
  li{
   list-style: none;
@@ -37,21 +91,8 @@ body {
 
  }
 
-body.dark-mode li a{
-  
-}
 
 
-
- :root {
-  --family1: 'DM Sans', sans-serif;
-  --brand_color:#FFD700;
-  --font_color1:#000000 ;
- 
-
- 
-
-}
 
 
 
@@ -70,28 +111,3 @@ body.dark-mode li a{
 
 
 
-
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
