--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,7 +42,7 @@ background-color: #ffffff !important;
 
  :root {
   --family1: 'DM Sans', sans-serif;
-  --brand_color:#FFD700;
+  --brand_color:#E5B80B;
   --font_color1:#000000 ;
 
 }
