--- a/component/Home/Home.module.css
+++ b/component/Home/Home.module.css
@@ -69,9 +69,9 @@
   text-decoration: none;
   position: relative;
   top:5px;
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   font-size: 12px;
-  font-weight: 400;
+  font-weight: 600;
   letter-spacing: .3em;
 }
  .buttion_primary{
@@ -81,7 +81,7 @@
   width: 150px;
   height: 50px;
   border-radius: 40px;
-  background: linear-gradient(550deg,#102b51,#f9bf01);
+  background: var(--brand_color);
   background-clip: border-box;
 /* -webkit-background-clip: text; */
 /* -webkit-text-fill-color: transparent; */
@@ -149,7 +149,7 @@ color: rgba(0, 0, 0, 0.34);
   font-size: 2vw;
 font-family: var(--family1);
 font-weight: 400;
-margin-top: 50px;
+margin-top: 80px;
 }
 
 .home_section_two .head p{
