--- a/component/Navbar/Navbar.module.css
+++ b/component/Navbar/Navbar.module.css
@@ -9,7 +9,24 @@ variable css start
   responsive NAV bar 
   ==================
   ========================*/
+  .scrolledNavbar {
 
+    position: fixed !important;
+    top: 0;
+    z-index: 9999999999999;
+    backdrop-filter: blur(6px);
+    background-color: #c0c0c03d !important;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.082) !important;
+    padding-bottom: 0px !important;
+    transition: 0.4s;
+  }
+
+  .scrolledNavbar .nav .menu {
+    padding-top: 0px !important;
+  
+    display: flex;
+    justify-content: space-between;
+  }
 
 .header {
   /* background-color: rgba(0, 0, 0, 0.067); */
@@ -29,10 +46,10 @@ variable css start
 .header .buttion_primary p{
   position: relative;
   top: 7px;
-  color: rgb(255, 255, 255);
+  color: rgb(41, 41, 41);
   font-size: 12px;
   letter-spacing: 0.3em !important;
-  font-weight: 400;
+  font-weight: 600;
 }
 
 
@@ -58,17 +75,6 @@ variable css start
 
 
 
-.menu_item_has_children {
-  position: relative;
-
-  padding-right: 0px;
-}
-
-.menu_item_has_children:hover .sub_menu {
-  display: block;
-  opacity: 1;
-
-}
 
 
 .header .header__logo {
@@ -95,9 +101,68 @@ variable css start
 .header .nav .menu .nav_item .list {
   display: flex;
   margin-top: 0px;
+  align-items: baseline;
+  margin-bottom: 0px !important;
+}
+.header .nav .menu .nav_item{
+
+}
+.header .nav .menu .nav_item ul li:hover .sub_menu_list{
+
+  opacity: 1;
+  visibility: visible;
+  transition: 0.4s;
+  backdrop-filter: blur(10px) !important;
+  padding-bottom: 30px;
 }
 
+.header .nav .menu .nav_item ul li .sub_menu_list.services{
+  padding-bottom: 80px;
+}
+.header .nav .menu .nav_item ul li .sub_menu_list{
+  position: absolute;
+  top: 70px;
+  left: 0;
+  width: 100%;
 
+  background-color: #f7f2f2 !important;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.089);
+  backdrop-filter: blur(10px);
+z-index: 999999999999999;
+  opacity: 0;
+  visibility:hidden;
+}
+.header .nav .menu .nav_item ul li .sub_menu_list h6{
+  font-size: 2vw;
+  font-family: var(--family1);
+  font-weight: 400;
+  color: var(--brand_color);
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.header .nav .menu .nav_item ul li .sub_menu_list p{
+  font-family: var(--family1);
+  color: #555;
+  font-size: 14px;
+  padding-right: 100px;
+}
+.header .nav .menu .nav_item ul li .sub_menu_list .one {
+  display: flex;
+}
+
+.header .nav .menu .nav_item ul li .sub_menu_list .one .img img{
+  width: 70px;
+}
+.header .nav .menu .nav_item ul li .sub_menu_list .one .img{
+  width: 70px;
+  height: 70px;
+  border-radius: 100%;
+  box-shadow: 5px 4px 21px rgba(0,0,0,.07), -6px -6px 9px -1px #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 15px;
+}
 .header .nav .menu .nav_item ul li a p{
   margin-right: 25px;
 }
@@ -109,7 +174,7 @@ variable css start
   padding-right: 7px;
 
   position: relative;
-  top: 24px;
+
   margin-right: 30px;
 
 
@@ -161,7 +226,7 @@ variable css start
   width: 150px;
   height: 50px;
   border-radius: 40px;
-  background: linear-gradient(550deg,#102b51,#f9bf01);
+  background: var(--brand_color);
   background-clip: border-box;
 /* -webkit-background-clip: text; */
 /* -webkit-text-fill-color: transparent; */
