--- a/component/Why_octagram/Two/two.module.css
+++ b/component/Why_octagram/Two/two.module.css
@@ -64,3 +64,61 @@ color: rgb(0, 0, 0);
 margin-top: 20px;
 text-transform: uppercase;
 }
+
+
+
+
+
+
+
+@media screen and (max-width: 575px) {
+
+    .why_section_two .heading_one .card .one img{
+   
+        width: 80px;
+        height: 80px;
+    }
+    .why_section_two .heading_one .card .one p{
+        margin-left: 20px;
+        font-family: var(--family1);
+        line-height: 1.5em;
+        color: #555;
+        font-size: 12px;
+   
+    }
+    .why_section_two .heading_one .card{
+        padding: 5px;
+    }
+    .why_section_two .heading_two{
+        margin-top: 50px !important;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        padding: 20px;
+        background-color: var(--brand_color);
+    }
+    .why_section_two .heading_two .one{
+        display: flex;
+        justify-content: center;
+        margin-top: 10px;
+    }
+
+    
+.why_section_two .heading_two .one .button{
+    width: 220px;
+    padding: 15px 25px;
+    height: 50px;
+    border-radius: 40px;
+    font-family: var(--family1);
+    font-weight: 600;
+    font-size: 12px;
+    letter-spacing: 0.3em !important;
+    background-color: #ffffff;
+text-decoration: none;
+color: rgb(0, 0, 0);
+margin-top: px;
+text-transform: uppercase;
+}
+
+}
+
+
