--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,31 +1,31 @@
-
-.slider_red_one .slick-slider .slick-list{
- 
-}
+.slider_red_one .slick-slider .slick-list {}
 
 
-.red-slider  .slick-list {
+.red-slider .slick-list {
   transform: translate3d(0, 0, 0);
   height: 907px !important;
   padding-top: 200px !important;
 
 }
-.red-slider  .slick-list .slick-slide{
+
+.red-slider .slick-list .slick-slide {
   display: flex;
   justify-content: center;
   /* width: 300px !important; */
   /* backdrop-filter: blur(20px) !important; */
 
 }
-.red-slider  .slick-list .slick-active  .Home_item__csXbs::after{
+
+.red-slider .slick-list .slick-active .Home_item__csXbs::after {
   position: absolute;
   top: 0;
   content: '0';
   width: 100% !important;
-  height:  100% !important;
+  height: 100% !important;
   backdrop-filter: blur(0px) !important;
 }
-.red-slider  .slick-list .slick-active .Home_item__csXbs{
+
+.red-slider .slick-list .slick-active .Home_item__csXbs {
   position: relative;
   /* right: 25px; */
   transition: 0.4s;
@@ -34,26 +34,55 @@
   padding-bottom: 30px;
   /* width: 300px !important; */
   /* backdrop-filter: blur(20px) !important; */
-background-color: #ffffff !important;
+  background-color: #ffffff !important;
 }
 
- /* Light Mode Styles */
- 
+/* Light Mode Styles */
 
- :root {
+
+:root {
   --family1: 'DM Sans', sans-serif;
-  --brand_color:#E5B80B;
-  --font_color1:#000000 ;
+  --brand_color: #E5B80B;
+  --font_color1: #000000;
 
 }
+
 body {
   max-width: 100vw;
   overflow-x: hidden;
   background-color: #f7f2f2 !important;
 
- }
- 
+}
 
+@media screen and (max-width: 575px) {
+  .red-slider .slick-list {
+    transform: translate3d(0, 0, 0);
+    height: 507px !important;
+    padding-top: 20px !important;
+  
+  }
+  .red-slider .slick-list .slick-active .Home_item__csXbs {
+    position: relative;
+    /* right: 25px; */
+    transition: 0.4s;
+    width: 100% !important;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    /* width: 300px !important; */
+    /* backdrop-filter: blur(20px) !important; */
+    background-color: #ffffff !important;
+  }
+  
+.red-slider .slick-list .slick-active .Home_item__csXbs::after {
+  position: absolute;
+  top: 0;
+  content: '0';
+  width: 100% !important;
+  height: 100% !important;
+  backdrop-filter: blur(0px) !important;
+}
+
+}
 
 * {
   box-sizing: border-box;
@@ -61,11 +90,12 @@ body {
   margin: 0;
 }
 
- 
- li{
+
+li {
   list-style: none;
- }
- ::-webkit-scrollbar {
+}
+
+::-webkit-scrollbar {
   width: 5px;
 
 }
@@ -80,16 +110,17 @@ body {
   border-radius: 10px;
   width: 5px;
 }
- /* Dark Mode Styles */
+
+/* Dark Mode Styles */
 
 
 
 
- body.dark-mode {
-   /* background-color: #000000 !important; */
-   background: #000000;
+body.dark-mode {
+  /* background-color: #000000 !important; */
+  background: #000000;
 
- }
+}
 
 
 
@@ -99,15 +130,10 @@ body {
 @media (prefers-color-scheme: dark) {
   :root {
 
-    --brand_color:#f9bf01 !important;
-    --font_color1:#000000 ;
+    --brand_color: #f9bf01 !important;
+    --font_color1: #000000;
 
 
- 
+
   }
 }
-
-
-
-
-
